Made DistinguishedName.EMPTY_PATH immutable.